[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17.7"
log = "0.4.20"
env_logger = "0.11.1"
clap-verbosity-flag = "2.1.2"
ratatui = "0.26.0"
crossterm = "0.27.0"
json = "0.12.4"
itertools = "0.12.1"
